--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     },
     "homepage": "https://github.com/singhayushh/project-moo#readme",
     "dependencies": {
+        "@types/ejs": "^3.1.0",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
+        "ejs": "^3.0.2",
         "express": "^4.17.2",
         "jsonwebtoken": "^8.5.1",
         "mocha": "^9.2.0",
